# DRON-TS

./: CMakeLists.txt  README.md  telemetria_v1.c
gps/: CMakeLists.txt
gps/src/: main.c
gw/: CMakeLists.txt
gw/inc/: device_config.h  error_manager.h  nrf24_driver.h  spi_manager.h
gw/src/: gw.c  nrf24_driver.c  spi_manager.c  transmisor.c
headers/: MPU6050_i2c.h
inc/: cy273.h
src/: MPU6050_i2c.c  cy273_i2c.c  main.c
transmisor/: CMakeLists.txt
transmisor/inc/: MPU6050_i2c.h  cy273.h  gps.h  pin_manager.h
transmisor/src/: MPU6050_i2c.c  cy273_i2c.c  gps.c  pin_manager.c  transmisor.c
